Fix several small WP8 issues: Pull to refresh text not visible, demo margin on WP. Closes #1225. Fix ListView active states, detail icons and states. Closes #1214. Fix missing ListView items overflow: hidden. Closes #1216. Fix content buttons too small. Closes #1215.

--- a/styles/mobile/icons.less
+++ b/styles/mobile/icons.less
@@ -358,6 +358,13 @@ body:before
     content: "\e0f7";
 }
 
+.km-wp .km-loading:after,
+.km-wp .km-load-more .km-icon:after,
+.km-wp .km-scroller-refresh .km-icon:after
+{
+    content: "\e0f6";
+}
+
 .km-meego .km-loading:after,
 .km-meego .km-load-more .km-icon:after,
 .km-meego .km-scroller-refresh .km-icon:after
