--- a/styles/mobile/wp8.less
+++ b/styles/mobile/wp8.less
@@ -49,7 +49,9 @@
 .km-wp-dark .k-widget,
 .km-wp-dark .k-group,
 .km-wp-dark .k-content,
-.km-wp-dark .km-button
+.km-wp-dark .km-button,
+.km-wp-dark .km-load-more,
+.km-wp-dark .km-scroller-pull
 {
 	color: @main-text-dark;
 }
@@ -59,7 +61,9 @@
 .km-wp-light .k-widget,
 .km-wp-light .k-group,
 .km-wp-light .k-content,
-.km-wp-light .km-button
+.km-wp-light .km-button,
+.km-wp-light .km-load-more,
+.km-wp-light .km-scroller-pull
 {
 	color: @main-text-light;
 }
@@ -118,12 +122,21 @@
 	margin-left: 0;
 }
 
-.km-wp .km-button.km-state-active
+.km-wp .km-detail:active,
+.km-wp .km-button:active,
+.km-wp .km-detail.km-state-active,
+.km-wp .km-button.km-state-active,
+.km-wp li.km-state-active .km-listview-link,
+.km-wp li.km-state-active .km-listview-label,
+.km-wp li.km-state-active .km-detail
 {
 	background: @accent-background;
 }
 
-.km-wp *:not(.km-tabstrip) > .km-button.km-state-active
+.km-wp *:not(.km-tabstrip) > .km-button:active,
+.km-wp *:not(.km-tabstrip) > .km-button.km-state-active,
+.km-wp li.km-state-active .km-listview-link,
+.km-wp li.km-state-active .km-listview-label
 {
     color: @accent-text;
 }
@@ -177,7 +190,7 @@
     vertical-align: middle;
 }
 
-.km-wp .km-navbar .km-button
+.km-wp .km-button
 {
 	font-size: .9em;
 	line-height: 1.6em;
@@ -393,10 +406,14 @@
 }
 
 .km-wp .km-scrollview,
-.km-wp .km-buttongroup,
-.km-wp .km-scroll-container
+.km-wp .km-buttongroup
 {
     overflow: hidden;
+}
+
+.km-wp .km-scroll-container
+{
+    padding-bottom: 20px;
 }
 
 /* Orientation fallback */
@@ -406,4 +423,58 @@
   {
       animation-name: -kendo-landscape;
   }
+}
+
+/* Pull To Refresh */
+
+.km-wp .km-load-more,
+.km-wp .km-scroller-pull
+{
+    font-size: 2rem;
+}
+
+/* ListView */
+
+.km-wp .km-list > li
+{
+    overflow: hidden;
+}
+
+/* ListView Detail Icons */
+
+.km-wp .km-badge,
+.km-wp .km-detail
+{
+    .linear-gradient-image(top, rgba(255,255,255,.5), rgba(255,255,255,.2) 50%, rgba(255,255,255,0.1) 50%, rgba(255,255,255,0));
+    color: @accent-text;
+    border: .3em solid @accent-text;
+}
+
+.km-wp .km-badge
+{
+    background: @accent-background;
+    border: 0;
+    background-clip: padding-box;
+    line-height: 1.1rem;
+    .border-radius(2em);
+}
+
+.km-wp .km-detail
+{
+    position: absolute;
+    height: 1.2em;
+    width: 1.3em;
+    right: .4em;
+    font-size: 1.8rem;
+    margin-top: -.6em;
+    border: none;
+    background: @main-background;
+    .box-sizing(border-box);
+}
+
+.km-wp .km-detaildisclose:after,
+.km-wp .km-detaildisclose:before
+{
+    font-size: .86em;
+    margin-left: -2px;
 }
